--- a/projeto/css/style.css
+++ b/projeto/css/style.css
@@ -1,5 +1,50 @@
-body, html {
-	font-family: 'Lato', sans-serif;
-	text-rendering: optimizeLegibility !important;
-	-webkit-font-smoothing: antialiased !important;
-	color: #777;}
+body, html {font-family: 'Lato', sans-serif;	text-rendering: optimizeLegibility !important;	-webkit-font-smoothing: antialiased !important;	color: #777;}
+
+/* h1 - h6 */
+h1 {}
+h1 strong {font-weight: 900;}
+h2 {margin:0; color: #555; line-height: 20px; font-size: 32px; font-weight: 700;}
+h3 {font-size: 16px; font-weight: 700;}
+h4 {font-size: 20px; color: #666;}
+h5 {text-transform: uppercase; font-weight: 700; line-height: 20px;}
+
+/* p, a */
+p {font-family: 'Open Sans', sans-serif;}
+a {color: #0d7fad;}
+a:hover, a:focus { text-decoration: none; color: #222; }
+
+/* .clearfix */
+.clearfix {display: inline-block;}
+.clearfix:after {visibility: hidden; display: block; font-size: 0, content:" "; clear: both; height: 0;}
+.clearfix {display: block;}
+* html .clearfix {height: 1%}
+
+/* ul, ol */
+ul, ol {padding: 0; webkit-padding: 0; moz-padding: 0; list-style:none;}
+
+/* hr */
+hr {height: 3px; width: 60px; text-align: center; position: relative; border: 0; margin: 10px auto 30px; background: #0d7fad; }
+
+/* menu, navbar */
+#menu {padding: 20px; transition: all 0.8s;}
+#menu.navbar-default { background-color: rgba(248, 248, 248, 0); border-color: rgba(231, 231, 231, 0);}
+#menu a.navbar-brand {text-transform: uppercase; font-size: 22px; color: #000; font-weight: 900;} /*  TODO: color: #fff; */
+#menu a.navbar-brand i.fa {color: rgba(0,0,0,0.7); margin-right: 3px;} /* TODO: color: rgba(255,255,255,0.7); */
+#menu.navbar-default .navbar-nav > li > a {text-transform: uppercase; color: #eeeeee; font-size: 12px; letter-spacing: 1px;}
+#menu.navbar-default .navbar-nav > li > a:hover {color: #0d7fad;}
+.on { background-color: #222222 !important; padding: 0 !important; }
+.navbar-default .navbar-nav > .active > a {color: #0d7fad !important; background-color: transparent; }
+.navbar-default .navbar-nav > .active > a:hover {color: #0d7fad !important; background-color: transparent; }
+.navbar-default .navbar-nav > .active > a:focus {color: #0d7fad !important; background-color: transparent; }
+
+
+
+
+
+
+
+
+
+
+
+
