--- a/projeto/css/style.css
+++ b/projeto/css/style.css
@@ -7,30 +7,36 @@ h2 {margin:0; color: #555; line-height: 20px; font-size: 32px; font-weight: 700;
 h3 {font-size: 16px; font-weight: 700;}
 h4 {font-size: 20px; color: #666;}
 h5 {text-transform: uppercase; font-weight: 700; line-height: 20px;}
+.about-text h4 {color: #0d7fad;}
 
-/* p, a */
+/* Paragrafos, links e afins */
 p {font-family: 'Open Sans', sans-serif;}
+p.p-job { color: #0d7fad; }
+p.p-email { color: #f4aa42; }
 a {color: #0d7fad;}
 a:hover, a:focus { text-decoration: none; color: #222; }
+em.em-blue {color: #0d7fad;}
+strong.str-or {color: #f4aa42;}
+p.p-service {padding-bottom: 10px;}
 
-/* .clearfix */
+/* classe clearfix */
 .clearfix {display: inline-block;}
 .clearfix:after {visibility: hidden; display: block; font-size: 0, content:" "; clear: both; height: 0;}
 .clearfix {display: block;}
 * html .clearfix {height: 1%}
 
-/* ul, ol */
+/* listas - ul, ol */
 ul, ol {padding: 0; webkit-padding: 0; moz-padding: 0; list-style:none;}
 
 /* hr */
-hr {height: 3px; width: 60px; text-align: center; position: relative; border: 0; margin: 10px auto 30px; background: #0d7fad; }
+hr {height: 3px; width: 60px; text-align: center; position: relative; border: 0; margin: 10px auto 30px; background: #f4aa42; }
 
 /* menu, navbar */
 #menu {padding: 20px; transition: all 0.8s;}
 #menu.navbar-default { background-color: rgba(248, 248, 248, 0); border-color: rgba(231, 231, 231, 0);}
 #menu a.navbar-brand {text-transform: uppercase; font-size: 22px; color: #fff; font-weight: 900 ;} 
-#menu a.navbar-brand i.fa {color: rgba(255,255,255,0.7); margin-right: 3px;} 
-#menu.navbar-default .navbar-nav > li > a {text-transform: uppercase; color: #eeeeee; font-size: 12px; letter-spacing: 1px;}
+#menu a.navbar-brand i.fa {color: rgba(244, 170, 66, 0.7); margin-right: 3px;} 
+#menu.navbar-default .navbar-nav > li > a {text-transform: uppercase; color: #f4aa42; font-size: 12px; letter-spacing: 1px;}
 #menu.navbar-default .navbar-nav > li > a:hover {color: #0d7fad;}
 .on { background-color: #222222 !important; padding: 0 !important; }
 .navbar-default .navbar-nav > .active > a {color: #0d7fad !important; background-color: transparent; }
@@ -42,7 +48,7 @@ hr {height: 3px; width: 60px; text-align: center; position: relative; border: 0;
 .navbar-default .navbar-toggle:hover > .icon-bar {background-color: #FFF;}
 
 /* Home, Buttons */
-header {background: url(../img/header-bg.jpg) no-repeat bottom right; background-size: cover; color: #cfcfcf; position: relative; height: 100%}
+header {background: url(../img/header2-bg.jpg) no-repeat bottom right; background-size: cover; color: #cfcfcf; position: relative; height: 100%}
 header p {color: rgba(255,255,255,0.8); font-size: 20px; margin-bottom: 80px;}
 .intro-text {position: relative; padding-top: 250px; padding-left: 0; padding-right: 0; padding-bottom: 170px;}
 .intro-text h1 {font-size: 60px; text-transform: uppercase; color: #fff;}
@@ -51,13 +57,15 @@ header p {color: rgba(255,255,255,0.8); font-size: 20px; margin-bottom: 80px;}
  .btn-default:focus, .btn-default.focus, .btn-default:active, .btn-default.active {background-color: transparent; color: #fff; border: 2px solid rgba(255,255,255, 0.8);}
 
 /* Serviços */
-#services-section {padding: 120px 0; background-color: #fff;}
+#services-section {padding: 90px 0; background-color: #f6f6f6;}
 #services-section h4 {font-weight: 700;}
 .space {margin-top: 40px;}
 #services-section i.fa {font-size: 40px; margin-bottom: 20px; transition: all 0.5s; color: #0d7fad;}
+#services-section i.fa:hover {color: #f4aa42;}
+#services-section i.fa-mobile-phone {font-size: 60px !important; margin-bottom: 12px; margin-top: -10px; }
 
 /* Trabalhos */
-#works-section {padding: 120px 0; background-color: #f6f6f6;}
+#works-section {padding: 100px 0; background-color: #f6f6f6;}
 .categories {padding-bottom: 30px; text-align: center;}
 ul.cat li {display: inline-block; padding-bottom: 30px;}
 ol.type li {display: inline-block; margin-left: 20px;}
@@ -84,11 +92,11 @@ ol.type li a:hover {color:#0d7fad; border: 1px solid #0d7fad;}
 #works-section i.fa { height: 30px; width: 30px; border: 1px solid #F5AB35; font-size: 20px; padding: 5px; border-radius: 50%; color: #F5AB35;}
 
 /* Sobre nós */
-#about-section {padding: 120px 0;}
+#about-section {padding: 100px 0;}
 #about-section p { margin-top: 20px; margin-bottom: 30px; }
 
 /* Time */
-#team-section {padding: 100px 0;}
+#team-section {padding: 80px 0;}
 .section-title.center {padding: 30px 0;}
 .section-title h2 {margin-bottom: 30px;}
 img.img-circle.team-img {width: 150px; height: 150px; border: 4px solid transparent; transition: all 0.5s;}
@@ -96,17 +104,13 @@ img.img-circle.team-img {width: 150px; height: 150px; border: 4px solid transpar
 #team-section .thumbnail {background: transparent; border: 0;}
 #team-section .thumbnail .caption {padding: 9px;}
 
-/* Realizações */
-#achievements {padding: 80px 0; background-color: #0d9ebf;}
-.achievement-box {text-align: center; margin: 20px 0;}
-.achievement-box h4 {font-size: 16px; color: rgba(255,255,255,0.8); text-transform: uppercase;}
-.achievement-box span.count {color: #fff; font-size: 50px; font-weight: 500; display: block;}
 
 /* Fale Conosco */
-#contact-section { padding: 120px 0 60px 0; background-color: #f6f6f6; }
+#contact-section { padding: 100px 0 60px 0; background-color: #f6f6f6; }
 #contact-section h3 {font-size: 20px; font-weight: 400;}
 #contact-section form {padding: 30px 0;}
-#contact-section i.fa {color: #0d7fad; font-size: 30px; margin-bottom: 10px; }
+#contact-section i.fa {color: #0d7fad; font-size: 30px; margin-bottom: 10px; transition: all 0.3s; }
+#contact-section i.fa:hover {color: #f4aa42;}
 label {font-size: 12px; font-weight: 400; font-family: 'Open Sans', sans-serif; float: left;}
 #contact-section .btn {background: transparent; border: 2px solid #11a2db; border-radius: 4px; padding: 10px 20px; margin-top: 20px; color: #11a2db;}
 #contact-section .btn:hover { background: #11a2db; border: 2px solid #11a2db;	color: #fff;}
@@ -115,11 +119,14 @@ label {font-size: 12px; font-weight: 400; font-family: 'Open Sans', sans-serif; 
 .btn:active, .btn.active {outline: 0; box-shadow: none;}
 a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn.active.focus { outline: none; outline-offset: none;}
 
+/* Trabalhe conosco*/
+#work-with {padding: 70px 0; background-color: #fff;}
+
 /* Rodapé, redes sociais e media*/
 #social-section {padding: 30px 0; background-color: #11a2db; text-align: center;}
 #social-section .social ul li {display: inline-block; margin: 0 20px;}
 #social-section .social i.fa { font-size: 24px; padding: 4px 5px; color: #fff; transition: all 0.5s; }
-#social-section .social i.fa:hover {color: #666;}
+#social-section .social i.fa:hover {color: #f4aa42;}
 
 #footer {background-color: #222222; color: #777; text-align: center; padding: 15px 0 10px 0;}
 #footer p {font-size: 13px; margin-top: 10px;}
